# hirc

./: .commenter.cabal.swo  .gitignore  README.md  commenter.cabal  database.conf  hirc.cabal  lbh-jail.conf
ActiveCode/: Bash.hi  C.hi  Haskell.hi  JavaScript.hi  Languages.hi
Commenter/: .Controllers.hs.swp  .Models.hs.swp  .Views.hs.swo  .Views.hs.swp  Controllers.hs  Models.hi  Models.hs  Policy.hi  Policy.hs  Views.hi  Views.hs
Hirc/: .Controllers.hs.swp  .Models.hs.swp  .Policy.hs.swp  .Views.hs.swp  Controllers.hs  Models.hs  Policy.hs  Views.hs
LBH/: ActiveCode.hi  Controllers.hi  MP.hi  Utils.hi  Views.hi
cabal-dev/: cabal.config
cabal-dev/packages-7.4.1.conf/: HTTP-4000.2.8-251dd7576c1313783d6840a1aca0f0e6.conf  List-0.5.1-828b396b8001ebbc0d45e1ea832ffc07.conf  MonadRandom-0.1.8-aa9dd8773c76722ffbe70c8f2bdf4fbd.conf  SHA-1.6.1-ec209ed8fc3efb1e768d2d2315bf38dd.conf  aeson-0.6.1.0-237221232955650c98639da57dbd00cc.conf  ansi-terminal-0.6-5fe5cc159c9aa74e59a82d5acdd0457f.conf  asn1-data-0.7.1-34b6e106a961899a10644df9e07ce231.conf  attoparsec-0.10.4.0-9f1149d1a08b60a90aa1ea998856f9d1.conf  attoparsec-conduit-1.0.1-6f4216a65e738f77d8ecf3fb6f97e190.conf  authenticate-1.3.2.6-704fb81fc97159b9e5bf4c14619e574b.conf  base-unicode-symbols-0.2.2.4-302c954ea45e813338786c6c2cbd0348.conf  base64-bytestring-1.0.0.1-d5a9a3c456fb8d29fdad5ba7efdc3484.conf  binary-0.7.0.1-416b3e22e991bc6330c2a97c44595807.conf  blaze-builder-0.3.1.1-19e703911e40afb02cfe4e723d96282d.conf  blaze-builder-conduit-1.0.0-3f3c2304e7282514b72b26da05516ed2.conf  blaze-html-0.6.1.1-1e112fbb83c68ae3bcb7f06398a949da.conf  blaze-markup-0.5.1.5-ec4fa20eae997eeb204d0d707f4dc2ba.conf  bson-0.2.2-2906ebdb3966c7ca6aa6565eb0998bc1.conf  byteorder-1.0.3-3af22bff7046daf38de94139f3ec4862.conf  bytestring-0.10.0.2-d7fd21e898c13d4366509c58b659f472.conf  case-insensitive-1.0.0.1-586b0653576817012c7b223d25ddcfbc.conf  cereal-0.3.5.2-39a8c3719db8d839a5d8d93c4c0e533c.conf  certificate-1.3.6-dc8bb595456e80d45051cfdbb04930fe.conf  cipher-aes-0.1.8-7f69d9e8ab7697191369d33d5de960bb.conf  cipher-rc4-0.1.2-df40fa359fceb947a41b668155f2f024.conf  citeproc-hs-0.3.8-e3e08981d5729ef6477ab7226b3ffceb.conf  cjail-0.1-fc5a47727434365037a5d3bab00f743d.conf  conduit-1.0.4.2-7a9c6df52dd74d9f1e0daf6d2df68bd7.conf  cookie-0.4.0.1-d38881d2a7d19de59dea99a2dd671225.conf  cprng-aes-0.3.4-feada2114b1926b85e713c60bf163413.conf  crypto-api-0.11-d53997c50c932f113cfa1beb174908f0.conf  crypto-conduit-0.5.1-fa42b528b48bbfcb3d2c3294a81735c2.conf  crypto-numbers-0.1.3-4b71a9e40681ecc5e029351402038e0c.conf  crypto-pubkey-0.1.2-27433335aede1cd0c76da2247791b829.conf  crypto-pubkey-types-0.2.0-d5b25a6b0206aec0c48fcd084843f371.conf  crypto-random-api-0.2.0-f156ce95cb0b16e208ce65f07535952e.conf  cryptohash-0.9.0-e809539276941e13703cb30dbe6e2d53.conf  data-binary-ieee754-0.4.3-f76ee1e7fd81725acabe197a6a9f3439.conf  (+94 more)
(+1051 files in other folders)
