Name:           hIRC
Version:        0.0.0.1
build-type:     Simple
Author:         Amy Shen
Maintainer:     
Stability:      experimental
Synopsis:       
Category:       Web
Cabal-Version:  >= 1.6

Description: Hails IRC - a chat app inspired by IRC. The name is pronounced hi-RC.

--X-Hails-Server: Commenter.Controllers

Library
  Build-Depends:
    base              >= 4.5     && < 5.0
   ,lio
   ,transformers      >= 0.2.2
   ,mtl               >= 2.0
   ,containers        >= 0.4.2
   ,bytestring        >= 0.10
   ,text              >= 0.11
   --,lio               >= 0.9.2.2
   ,hails             >= 0.9.2.1
   ,blaze-html        >= 0.5.1.3
   ,http-types        >= 0.7
   ,pureMD5           >= 2.1.2.1
   ,aeson             >= 0.6.1.0
   ,process           >= 1.1.0.1
   ,regex-posix       >= 0.95
   ,regex-compat
   ,pandoc            >= 1.11.1
   ,time              >= 1.2.0.5
   ,unix              >= 2.6.0
   ,filepath          >= 1.3
   ,old-locale        >= 1.0.0.5
   ,xml               >= 1.3.12
   ,feed              >= 0.3.8
   ,MissingH
   ,xhtml             >= 3000.2.1
   ,bson              >= 0.2.2

  Other-Modules: Hirc.Controllers
                 Hirc.Views
                 Hirc.Models
                 Hirc.Policy
